# Figurine-Price-Prediction

./: Parsing.ipynb  pyproject.toml
.ipynb_checkpoints/: page_10-checkpoint.csv  page_20-checkpoint.csv  pyproject-checkpoint.toml
csv_data/: page_30.csv  page_40.csv  page_49.csv
